--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 		<div class="grid-uvod">
 			<div class="menu">
 				<ul>
-					<li class="polozka"><a href="#">Úvod</a></li>
-					<li class="polozka"><a href="#">Proč jet na Island</a></li>
-					<li class="polozka"><a href="#">Co musíte vidět</a></li>
-					<li class="polozka"><a href="#">Fotogalerie</a></li>
+					<li class="polozka"><a href="#uvod">Úvod</a></li>
+					<li class="polozka"><a href="#proc">Proč jet na Island</a></li>
+					<li class="polozka"><a href="#musite-videt">Co musíte vidět</a></li>
+					<li class="polozka"><a href="#fotogalerie">Fotogalerie</a></li>
 				</ul>
 			</div>
 
 
 			<!-- sekce Úvod -->
-			<div class="text-uvod">
+			<div class="text-uvod" id="uvod">
 				<p>Island je jeden z nejpozoruhodnějších kousků pevniny, který v Evropě můžete navštívit. Neuchvátí jenom fotografy - krajináře, ale snad každého, kdo miluje divokou přírodu. Ne nadarmo se také říká, že si jej při první návštěvě zamilujete a budete se muset stále vracet. Byl to i můj případ!</p>
 
 				<p>Rád bych popsal některá místa, která prostě při návštěvě nemůžete vynechat. Není ani důvod, jejich dostupnost je výborná díky hlavní okružní cestě, po které pohodlně celý ostrov za několik dní objedete bez toho, abyste museli zajíždět do hůře dostupného vnitrozemí. I tam je samozřejmě spousta dech beroucích míst, ale za pár dní se stihnout bohužel vše nedá.</p>
@@ -57,7 +57,7 @@
 	</section>
 
 		<!-- sekce Proč -->
-	<section class="proc">
+	<section class="proc" id="proc">
 		<div class="grid-proc">
 			<h2>Proč jet na Island</h2>
 
@@ -76,7 +76,7 @@
 		</div>
 	</section>
 		<!-- sekce Co musíte vidět -->
-	<section class="musite-videt">
+	<section class="musite-videt" id="musite-videt">
 
 		<div class="grid-musite-videt">
 			<h2 class="podnadpis2">Co musíte vidět</h2>
@@ -114,7 +114,7 @@
 
 
 		<!-- sekce Fotogalerie -->
-	<section class="fotogalerie-fotek">
+	<section class="fotogalerie-fotek" id="fotogalerie">
 
 				<h2 class="nadpis-fotogalerie">Fotogalerie</h2>
 
